--- a/DOM/dom.html
+++ b/DOM/dom.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>DOM Concept</h1>
+    <h1 id="heading">DOM Concept</h1>
+    <button id="changeBtn">Change</button>
     <p id="count">0</p>
     <button id="IncBtn">Increment</button>
     <br />
@@ -19,7 +21,23 @@
     <button id="remove">Delete</button>
     <ol id="list"></ol>
 
-    <div id="div"></div>
+    <div id="div">
+      <div>
+        <button id="b1" class="box"></button>
+        <button id="b2" class="box"></button>
+        <button id="b3" class="box"></button>
+      </div>
+      <div>
+        <button id="b4" class="box"></button>
+        <button id="b5" class="box"></button>
+        <button id="b6" class="box"></button>
+      </div>
+      <div>
+        <button id="b7" class="box"></button>
+        <button id="b8" class="box"></button>
+        <button id="b9" class="box"></button>
+      </div>
+    </div>
 
     <script src="./script.js"></script>
   </body>
